DEX-25134 | fix: move touch event to not overlap buttons

--- a/_src/blocks/timeline-carousel/timeline-carousel.css
+++ b/_src/blocks/timeline-carousel/timeline-carousel.css
@@ -19,7 +19,7 @@
     touch-action: none;
   }
 
-  .slide-container {
+  .slides-container {
     > div {
       display: grid;
       grid-auto-flow: column;
